--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bookshelf-facade",
   "description": "Modern JavaScript wrapping Bookshelf Models",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "repository": "aniftyco/react-provider-tree",
@@ -26,7 +26,6 @@
     "dist/"
   ],
   "dependencies": {
-    "bookshelf": "^1.0.1",
     "bookshelf-paranoia": "^0.13.1",
     "bookshelf-uuid": "^1.0.1",
     "inflection": "^1.12.0"
@@ -34,11 +33,11 @@
   "devDependencies": {
     "@types/bookshelf": "^1.0.0",
     "@types/jest": "^24.0.23",
-    "@types/knex": "^0.16.1",
     "@types/node": "^12.12.17",
+    "bookshelf": "^1.0.0",
     "dotenv": "^8.2.0",
     "jest": "^24.9.0",
-    "knex": "^0.20.4",
+    "knex": "^0.19.0",
     "pg": "^7.14.0",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
@@ -47,7 +46,8 @@
     "typescript": "^3.7.3"
   },
   "peerDependencies": {
-    "knex": "^0.20.4",
+    "bookshelf": "^1.0.0",
+    "knex": ">=0.15.0 <0.20.0",
     "pg": "^7.14.0"
   }
 }
